--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
+  <!-- Navbar -->
   <nav>
     <div class="nav-container">
       <div class="logo" data-aos="zoom-in" data-aos-duration="1000">
@@ -18,9 +19,8 @@
         <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"><a href="#">Home</a></div>
         <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"><a href="#about">About</a></div>
         <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300"><a href="#skills">Skills</a></div>
-        <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400"><a href="#projects">Projects</a></div>
-        <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500"><a href="#contact">Contact</a></div>
-        <div class="link contact-btn" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600"><a href="#resume">Resume</a></div>
+        <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400"><a href="#contact">Contact</a></div>
+        <div class="link contact-btn" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500"><a href="#resume">Resume</a></div>
       </div>
       <i class="fa-solid fa-bars hamburg" onclick="hamburg()"></i>
     </div>
@@ -29,7 +29,6 @@
         <a href="#">Home</a>
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
-        <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
         <a href="#resume">Resume</a>
         <i class="fa-solid fa-xmark cancel" onclick="cancel()"></i>
@@ -37,6 +36,7 @@
     </div>
   </nav>
 
+  <!-- Home Section -->
   <section id="home">
     <div class="main-container">
       <div class="image" data-aos="zoom-in-right" data-aos-duration="800">
@@ -61,12 +61,46 @@
     </div>
   </section>
 
-  <!-- Include other sections: about, skills, projects, contact if needed -->
+  <!-- About Section -->
+  <section id="about">
+    <div class="about-container">
+      <h2 data-aos="fade-up" data-aos-duration="1000">About Me</h2>
+      <p data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">
+        I'm Hema, currently pursuing my MBA in Finance at Pondicherry University. I have a background in B.Tech and have completed courses in HTML, CSS, JavaScript, and SQL. I aim to build clean, responsive, and user-friendly websites to solve real-life problems and help businesses grow.
+      </p>
+    </div>
+  </section>
 
+  <!-- Skills Section -->
+  <section id="skills">
+    <div class="skills-container">
+      <h2 data-aos="fade-up" data-aos-duration="1000">My Skills</h2>
+      <ul>
+        <li data-aos="fade-right" data-aos-duration="800" data-aos-delay="200">HTML5</li>
+        <li data-aos="fade-right" data-aos-duration="800" data-aos-delay="300">CSS3</li>
+        <li data-aos="fade-right" data-aos-duration="800" data-aos-delay="400">JavaScript (Basics)</li>
+        <li data-aos="fade-right" data-aos-duration="800" data-aos-delay="500">Responsive Design</li>
+        <li data-aos="fade-right" data-aos-duration="800" data-aos-delay="600">Git & GitHub</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <div class="contact-container">
+      <h2 data-aos="fade-up" data-aos-duration="1000">Contact Me</h2>
+      <p data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">
+        You can reach out to me via email at <strong>hemavimala2002@gmail.com</strong> or connect on LinkedIn for collaborations and opportunities.
+      </p>
+    </div>
+  </section>
+
+  <!-- Footer -->
   <footer>
-    <p>© 2025 Hema. All rights reserved. | Contact: hemavimala2002@gmail.com</p>
+    <p>© 2025 Hema. All rights reserved.</p>
   </footer>
 
+  <!-- JS Scripts -->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({ offset: 0 });
