--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"><a href="#">Home</a></div>
         <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"><a href="#about">About</a></div>
         <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300"><a href="#skills">Skills</a></div>
-        <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400"><a href="#contact">Contact</a></div>
-        <div class="link contact-btn" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500"><a href="#resume">Resume</a></div>
+        <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400"><a href="#projects">Projects</a></div>
+        <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500"><a href="#contact">Contact</a></div>
+        <div class="link contact-btn" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600"><a href="#resume">Resume</a></div>
       </div>
       <i class="fa-solid fa-bars hamburg" onclick="hamburg()"></i>
     </div>
@@ -29,6 +30,7 @@
         <a href="#">Home</a>
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
         <a href="#resume">Resume</a>
         <i class="fa-solid fa-xmark cancel" onclick="cancel()"></i>
@@ -82,6 +84,18 @@
         <li data-aos="fade-right" data-aos-duration="800" data-aos-delay="500">Responsive Design</li>
         <li data-aos="fade-right" data-aos-duration="800" data-aos-delay="600">Git & GitHub</li>
       </ul>
+    </div>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects">
+    <div class="projects-container">
+      <h2 data-aos="fade-up" data-aos-duration="1000">My Projects</h2>
+      <div class="project-item" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">
+        <h3>Personal Portfolio Website</h3>
+        <p>This responsive personal portfolio website built using HTML, CSS, and basic JavaScript showcases my skills and projects effectively.</p>
+        <a href="https://hemashifa2002.github.io/ShadowFox/" target="_blank">View Project</a>
+      </div>
     </div>
   </section>
 
